syntax = "proto3";
package yoshino_s.soar_helper.v1;

import "google/protobuf/empty.proto";
import "proto/entpb/entpb.proto";

option go_package = "github.com/yoshino-s/soar-helper/internal/proto/v1";

message QueryRequest {
  string host = 1;
  bool no_cache = 2;
}

message BatchQueryRequest {
  repeated string hosts = 1;
  bool no_cache = 2;
}

message BatchQueryResponse {
  repeated entpb.Icp items = 1;
  map<string, string> errors = 2;
}

message StatisticResponse {
  int64 total = 1;
}

service IcpQueryService {
  rpc Query(QueryRequest) returns (entpb.Icp) {}
  rpc BatchQuery(BatchQueryRequest) returns (BatchQueryResponse) {}
  rpc Statistic(google.protobuf.Empty) returns (StatisticResponse) {}
}
